--- a/documentation/classes/InstagramAPI-Realtime-Handler-DirectHandler.html
+++ b/documentation/classes/InstagramAPI-Realtime-Handler-DirectHandler.html
@@ -112,6 +112,11 @@
                     <td class="phpdocumentor-cell">&#039;#^/direct_v2/threads/(?&lt;thread_id&gt;[^/]+)/items/(?&lt;item_id&gt;[^/]+)#D&#039;</td>
                 </tr>
                             <tr>
+                    <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Realtime-Handler-DirectHandler.html#constant_REACTIONS_REGEXP">REACTIONS_REGEXP</a></th>
+                    <td class="phpdocumentor-cell"></td>
+                    <td class="phpdocumentor-cell">&#039;#^/direct_v2/threads/(?&lt;thread_id&gt;[^/]+)/items/(?&lt;item_id&gt;[^/]+)/(?&lt;user_id&gt;[^/]+)$#D&#039;</td>
+                </tr>
+                            <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Realtime-Handler-DirectHandler.html#constant_ACTIVITY_REGEXP">ACTIVITY_REGEXP</a></th>
                     <td class="phpdocumentor-cell"></td>
                     <td class="phpdocumentor-cell">&#039;#^/direct_v2/threads/(?&lt;thread_id&gt;[^/]+)/activity_indicator_id/(?&lt;context&gt;[^/]+)$#D&#039;</td>
@@ -331,6 +336,28 @@
     </code>
             
 </article>
+                                    <a id="constant_REACTIONS_REGEXP"></a>
+<article
+        class="
+            phpdocumentor-element
+            phpdocumentor-constant
+            phpdocumentor-constant--public
+                    "
+>
+    <h4 class="phpdocumentor-constant__name">REACTIONS_REGEXP</h4>
+    <aside class="phpdocumentor-element-found-in">
+        <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
+        :
+        <span class="phpdocumentor-element-found-in__line">29</span>
+    </aside>
+        <code class="phpdocumentor-signature phpdocumentor-code ">
+        <span class="phpdocumentor-signature__visibility">public</span>
+        <span class="phpdocumentor-signature__type">mixed</span>
+        <span class="phpdocumentor-signature__name">$REACTIONS_REGEXP</span>
+        = <span class="phpdocumentor-signature__default-value">&#039;#^/direct_v2/threads/(?&lt;thread_id&gt;[^/]+)/items/(?&lt;item_id&gt;[^/]+)/(?&lt;user_id&gt;[^/]+)$#D&#039;</span>
+    </code>
+            
+</article>
                                     <a id="constant_ACTIVITY_REGEXP"></a>
 <article
         class="
@@ -343,7 +370,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">29</span>
+        <span class="phpdocumentor-element-found-in__line">30</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -365,7 +392,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">30</span>
+        <span class="phpdocumentor-element-found-in__line">31</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -387,7 +414,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">31</span>
+        <span class="phpdocumentor-element-found-in__line">32</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -409,7 +436,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">32</span>
+        <span class="phpdocumentor-element-found-in__line">33</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -431,7 +458,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">33</span>
+        <span class="phpdocumentor-element-found-in__line">34</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">public</span>
@@ -480,7 +507,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">36</span>
+        <span class="phpdocumentor-element-found-in__line">37</span>
     </aside>
         <p class="phpdocumentor-summary">Handle the message.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -521,7 +548,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">57</span>
+        <span class="phpdocumentor-element-found-in__line">58</span>
     </aside>
         <p class="phpdocumentor-summary">Process incoming event.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -572,7 +599,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">77</span>
+        <span class="phpdocumentor-element-found-in__line">78</span>
     </aside>
         <p class="phpdocumentor-summary">Process incoming action.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -623,7 +650,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">94</span>
+        <span class="phpdocumentor-element-found-in__line">95</span>
     </aside>
         <p class="phpdocumentor-summary">Patch op handler.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -674,7 +701,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">122</span>
+        <span class="phpdocumentor-element-found-in__line">123</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for the ADD op.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -725,7 +752,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">150</span>
+        <span class="phpdocumentor-element-found-in__line">151</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for the REPLACE op.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -776,7 +803,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">188</span>
+        <span class="phpdocumentor-element-found-in__line">189</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for the REMOVE op.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -827,7 +854,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">210</span>
+        <span class="phpdocumentor-element-found-in__line">211</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for NOTIFY op.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -878,7 +905,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">229</span>
+        <span class="phpdocumentor-element-found-in__line">230</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for thread creation/modification.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -938,7 +965,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">258</span>
+        <span class="phpdocumentor-element-found-in__line">259</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for thread item creation/modification.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -998,7 +1025,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">287</span>
+        <span class="phpdocumentor-element-found-in__line">288</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for thread item like/unlike.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1058,7 +1085,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">319</span>
+        <span class="phpdocumentor-element-found-in__line">320</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for thread activity indicator.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1109,7 +1136,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">345</span>
+        <span class="phpdocumentor-element-found-in__line">346</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for story update.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1160,7 +1187,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">373</span>
+        <span class="phpdocumentor-element-found-in__line">374</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for unseen count.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1210,7 +1237,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">395</span>
+        <span class="phpdocumentor-element-found-in__line">396</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for thread seen indicator.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1261,7 +1288,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">423</span>
+        <span class="phpdocumentor-element-found-in__line">424</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for screenshot notification.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1312,7 +1339,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">449</span>
+        <span class="phpdocumentor-element-found-in__line">450</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for direct story creation.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1363,7 +1390,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">480</span>
+        <span class="phpdocumentor-element-found-in__line">481</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for story action.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1414,7 +1441,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">509</span>
+        <span class="phpdocumentor-element-found-in__line">510</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for thread item removal.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1465,7 +1492,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">530</span>
+        <span class="phpdocumentor-element-found-in__line">531</span>
     </aside>
         <p class="phpdocumentor-summary">Handler for thread notify.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1516,7 +1543,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">559</span>
+        <span class="phpdocumentor-element-found-in__line">560</span>
     </aside>
         <p class="phpdocumentor-summary">Checks if the path starts with specified substring.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1566,7 +1593,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime/Handler/DirectHandler.php"><a href="../files/src-realtime-handler-directhandler.html"><abbr title="src/Realtime/Handler/DirectHandler.php">DirectHandler.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">574</span>
+        <span class="phpdocumentor-element-found-in__line">575</span>
     </aside>
         <p class="phpdocumentor-summary">Checks if the path ends with specified substring.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
