--- a/documentation/classes/InstagramAPI-Realtime-Handler-DirectHandler.html
+++ b/documentation/classes/InstagramAPI-Realtime-Handler-DirectHandler.html
@@ -114,7 +114,7 @@
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Realtime-Handler-DirectHandler.html#constant_REACTIONS_REGEXP">REACTIONS_REGEXP</a></th>
                     <td class="phpdocumentor-cell"></td>
-                    <td class="phpdocumentor-cell">&#039;#^/direct_v2/threads/(?&lt;thread_id&gt;[^/]+)/items/(?&lt;item_id&gt;[^/]+)/(?&lt;user_id&gt;[^/]+)$#D&#039;</td>
+                    <td class="phpdocumentor-cell">&#039;#^/direct_v2/threads/(?&lt;thread_id&gt;[^/]+)/items/(?&lt;item_id&gt;[^/]+)/reactions/likes/(?&lt;user_id&gt;[^/]+)$#D&#039;</td>
                 </tr>
                             <tr>
                     <th class="phpdocumentor-heading"><a href="../classes/InstagramAPI-Realtime-Handler-DirectHandler.html#constant_ACTIVITY_REGEXP">ACTIVITY_REGEXP</a></th>
@@ -354,7 +354,7 @@
         <span class="phpdocumentor-signature__visibility">public</span>
         <span class="phpdocumentor-signature__type">mixed</span>
         <span class="phpdocumentor-signature__name">$REACTIONS_REGEXP</span>
-        = <span class="phpdocumentor-signature__default-value">&#039;#^/direct_v2/threads/(?&lt;thread_id&gt;[^/]+)/items/(?&lt;item_id&gt;[^/]+)/(?&lt;user_id&gt;[^/]+)$#D&#039;</span>
+        = <span class="phpdocumentor-signature__default-value">&#039;#^/direct_v2/threads/(?&lt;thread_id&gt;[^/]+)/items/(?&lt;item_id&gt;[^/]+)/reactions/likes/(?&lt;user_id&gt;[^/]+)$#D&#039;</span>
     </code>
             
 </article>
